k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enenso-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /somecell/ensenso
        pathType: Prefix
        backend:
          service:
            name: enenso
            port:
              number: 3123
